--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -3,6 +3,11 @@
   margin: 0;
 }
 
+body {
+  background-color: #2b2a33;
+  color: #fff;
+}
+
 .nav {
   background-color: black;
   height: 50px;
@@ -12,6 +17,7 @@ a {
   color: #ffff;
   font-size: 24px;
   list-style-type: none;
+  text-decoration: none;
 }
 
 a:hover {
@@ -19,10 +25,43 @@ a:hover {
 }
 
 .center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    min-height: 90vh;
-    flex-direction: column;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 90vh;
+  flex-direction: column;
+}
+
+input {
+  display: block;
+  width: 14rem;
+  padding: 0.375rem 0.75rem;
+  margin: 0.4rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+#submit {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  text-decoration: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
