user can create a todo-list

--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -65,3 +65,23 @@ input {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+#my-list {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  border: 0.4px solid #fff;
+}
+
+#add-task {
+  width: 100px;
+}
+#add-task:hover{
+  color: #2b2a33;
+}
+
+li{
+  list-style-type: none;
+}
